# rust-macro-io

./: Cargo.toml  README.md
src/: lib.rs
tests/: tests.rs
tests/compile_failures/: no_brackets.rs  no_brackets.stderr  non_existing_file.rs  non_existing_file.stderr  number_literal.rs  number_literal.stderr  two_strings.rs  two_strings.stderr
tests/testfiles/: "quotes"  spaces filename.txt
