[package]
name = "macro_io"
version = "0.1.0"
authors = ["svenvdvoort <svenvdvoort@protonmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = "1.0"

[dev-dependencies]
trybuild = "1.0"
